argocd/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-policy
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      name: argocd-server
  policyTypes:
    - Ingress
  ingress:
    - {}
    # - from:
    #   - namespaceSelector:
    #       matchLabels:
    #         name: cloudflared
